--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 juniper = "0.14.2"
 dgraph = { version = "0.3.1", default-features = false, features = ["dgraph-1-1"] }
+serde_json = "1.0"
