--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-juniper = "0.14.2"
-dgraph = { version = "0.3.1", default-features = false, features = ["dgraph-1-1"] }
+actix-web = "2.0"
+actix-rt = "1.0"
+juniper = "0.14"
+dgraph = { version = "0.3", default-features = false, features = ["dgraph-1-1"] }
 serde_json = "1.0"
+log = "0.4"
+env_logger = "0.7"
