--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ dgraph = { version = "0.3", default-features = false, features = ["dgraph-1-1"] 
 serde_json = "1.0"
 log = "0.4"
 env_logger = "0.7"
+chrono = "0.4"
