--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 env_logger = "0.7"
 chrono = { version = "0.4", features = ["serde"] }
+regex = "1.3"
+lazy_static = "1.4"
 
 [dev-dependencies]
 rstest = "0.6"
